src/main/java/com/example/test/omnivore2trendithon2025/global/error/exception/NotFoundGroupException.java
package com.example.test.omnivore2trendithon2025.global.error.exception;

public abstract class NotFoundGroupException extends RuntimeException{
    public NotFoundGroupException(String message) {
        super(message);
    }
}
